--- a/appCEP/appCEP/appCEP.csproj
+++ b/appCEP/appCEP/appCEP.csproj
@@ -23,5 +23,8 @@
     <EmbeddedResource Update="View\BairrosPorCidade.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\BuscaCepPorLogradouros.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
